meson.build, expr/exprfilter.cpp, expr2/exprfilter.cpp: add Version() function
It returns:
 - version: a byte string indicating the version.
 - expr_backend: llvm (for lexpr) or jitasm (legacy).
 - expr_features: a list of byte strings for all supported features. e.g. here is the list
   for lexpr:
   [b'x.property', b'sin', b'cos', b'%', b'N', b'X', b'Y', b'pi', b'trunc', b'round', b'floor']

Signed-off-by: akarin <i@akarin.info>

--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,14 @@ project('Plugin', 'cpp',
   version: '8'
 )
 
+version_h = declare_dependency(
+    sources: vcs_tag(
+        command: ['git', 'describe', '--tags', '--long', '--always'],
+        input: 'version.h.in',
+        output: 'version.h'
+    )
+)
+
 sources = [
   # expr
   'expr/vslog.cpp',
@@ -23,7 +31,7 @@ if host_machine.cpu_family().startswith('x86')
 endif
 
 shared_module('akarin', sources,
-  dependencies: vapoursynth_dep,
+  dependencies: [ vapoursynth_dep, version_h ],
   link_with: libs,
   install: true,
   install_dir: join_paths(vapoursynth_dep.get_pkgconfig_variable('libdir'), 'vapoursynth'),
