meson: allow disabling LLVM static linking

--- a/meson.build
+++ b/meson.build
@@ -81,7 +81,7 @@ if use_asmjit
 else
   sources = sources_common + sources_expr2
   incdir = include_directories('expr2/reactor')
-  deps += dependency('llvm', version: ['>= 10.0', '< 14'], method: 'config-tool', static: true,
+  deps += dependency('llvm', version: ['>= 10.0', '< 14'], method: 'config-tool', static: get_option('static-llvm'),
     modules: [
       'asmprinter', 'executionengine', 'target', 'orcjit', 'native',
     ])
